# mlops-openfoodfacts

./: .gitignore  README.md  config.yaml  pyproject.toml
notebooks/: create-dataset.ipynb  eda.ipynb  evaluate.ipynb  predict-on-test.ipynb  register-model.ipynb  training-pipeline-ray.ipynb  training-pipeline.ipynb
src/: training_pipeline.py
