[tool.poetry]
name = "mlops-openfoodfacts"
version = "0.1.0"
description = ""
authors = ["Rinat Gareev <aldvinaldvin@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandas = "^1.4.4"
pyarrow = ">=6.0.1,<7.0.0"
matplotlib = "^3.5.3"
scipy = "^1.9.1"
scikit-learn = "^1.1.2"
ray = {extras = ["air"], version = "^2.0.0"}
tqdm = "^4.64.1"
mlflow-skinny = "^1.28.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
